fixed some spacing issues

--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -1,4 +1,8 @@
 .form-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
     justify-content: center;
     box-sizing: border-box;
     height: 40vh;
